--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
+/*Agregando una nueva tipografia*/
+@font-face {
+  font-family: fuente_1;
+  font-style: normal;
+  font-weight: normal;
+  src : url(TrailerParkGirl.otf);
+}
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+body {
+  background: linear-gradient(to right, #c4fdce, #aae6f8, #fec7f7);
+}
+
 .App {
-  text-align: center;
+  height: 100vh;
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.title {
+  width: 100%;
+  height: 10%;
+  font-size: 3rem;
+  background-color: rgb(20, 132, 207);
+  font-family: fuente_1;
   color: white;
+  text-align: center;
+  margin-top: 1px;
+  padding-top: 8px;
+
 }
 
-.App-link {
-  color: #61dafb;
+.calculator-grid {
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  min-height: 80vh;
+  grid-template-columns: repeat(4, 80px);
+  grid-template-rows: minmax(80px, auto) repeat(5, 80px);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.calculator-grid > button {
+  border-radius: 1rem;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: bold;
+  color: black;
+  border: 1px solid white;
+  outline: none;
+  background-color: #fafafa75;
+  margin: 3px;
+}
+
+.calculator-grid > button:hover {
+  background-color: #c6f700;
+}
+
+.span-two {
+  grid-column: span 2;
+}
+
+.output {
+  grid-column: 1/-1;
+  margin-bottom: .5rem;
+  background-color: white;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-around;
+  flex-direction: column;
+  border-radius: 1rem;
+  padding: 10px;
+  word-wrap: break-word;
+  word-break: break-all;
+}
+
+.output .previous-operand {
+  color: #00000090;
+  font-size: 1.5rem;
+}
+
+.output .current-operand {
+  color: #100cf3;
+  font-size: 2.5rem;
 }
